--- a/kaew-wan-backend/pom.xml
+++ b/kaew-wan-backend/pom.xml
@@ -9,7 +9,7 @@
 		<version>3.1.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>project2.kaewwan</groupId>
+	<groupId>gang.kaewwan</groupId>
 	<artifactId>kaew-wan-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kaew-wan-backend</name>
@@ -18,6 +18,20 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
