--- a/kaew-wan-backend/src/main/resources/application.yml
+++ b/kaew-wan-backend/src/main/resources/application.yml
@@ -25,3 +25,4 @@ application:
       expiration: 86400000
       refresh-token:
         expiration: 604800000
+      secret-key: UcbGQCpxBsZ8aQLUeLFWLOodKEoznGKIC9+rXBdorE4=
