--- a/kaew-wan-frontend/package.json
+++ b/kaew-wan-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"vite\" \"json-server --watch db_dev.json --port 3030\"",
+    "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -30,7 +30,6 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
-    "json-server": "^0.17.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
