--- a/kaew-wan-backend/pom.xml
+++ b/kaew-wan-backend/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>gang.kaewwan</groupId>
 	<artifactId>kaew-wan-backend</artifactId>
@@ -15,10 +15,28 @@
 	<name>kaew-wan-backend</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<kotlin.version>1.8.22</kotlin.version>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-client-apache5-jvm</artifactId>
+			<version>2.3.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.jan-tennert.supabase</groupId>
+			<artifactId>serializer-jackson-jvm</artifactId>
+			<version>1.4.2-dev-1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.jan-tennert.supabase</groupId>
+			<artifactId>storage-kt-jvm</artifactId>
+			<version>1.4.2-dev-1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
