--- a/kaew-wan-backend/pom.xml
+++ b/kaew-wan-backend/pom.xml
@@ -26,6 +26,16 @@
 			<artifactId>ktor-client-apache5-jvm</artifactId>
 			<version>2.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.github.jan-tennert.supabase</groupId>
