--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
               run: |
                 mvn clean install -DskipTests -B
                 mkdir -p target/dependency && (cd target/dependency; unzip ../*.jar)
+              working-directory: ./kaew-wan-backend
             - 
               name: Set up QEMU
               uses: docker/setup-qemu-action@v2
