--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs: 
     build-frontend:
-        name: build-fe
+        name: build-frontend
         runs-on: ubuntu-latest   
         steps:
             -
@@ -35,7 +35,7 @@ jobs:
                     context: ./kaew-wan-frontend
     
     build-backend:
-        name: build-be
+        name: build-backend
         runs-on: ubuntu-latest
         steps:
             -
@@ -74,4 +74,38 @@ jobs:
                 context: ./kaew-wan-backend
 
 
-
+    deploy-to-aws:
+        needs: [build-frontend,build-backend]
+        runs-on: ubuntu-latest
+        env: 
+            DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+        steps:
+            -
+                name: checkout
+                uses: actions/checkout@v2
+            -
+                name: Copy file via ssh password
+                uses: appleboy/scp-action@v0.1.4
+                with:
+                    host: ${{ secrets.HOST_SERVER }}
+                    username: ${{ secrets.HOST_USERNAME }}
+                    key: ${{ secrets.PRIVATE_KEY }}
+                    port: 22
+                    source: "docker-compose.yml"
+                    target: "/home/ubuntu/kaew-wan"
+            -
+                name: docker compose 
+                uses: appleboy/ssh-action@v0.1.10
+                with:
+                    host: ${{ secrets.HOST_SERVER }}
+                    username: ${{ secrets.HOST_USERNAME }}
+                    key: ${{ secrets.PRIVATE_KEY }}
+                    port: 22
+                    script: |
+                        export DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}
+                        cd /home/ubuntu/kaew-wan
+                        echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+                        docker compose down
+                        docker compose pull
+                        docker compose up -d
+                        rm -rf /home/ubuntu/kaew-wan
