--- a/kaew-wan-backend/src/main/resources/application.yml
+++ b/kaew-wan-backend/src/main/resources/application.yml
@@ -18,7 +18,10 @@ spring:
             - db
     servlet:
         multipart:
-            max-file-size: 10MB
+            max-file-size: 4MB
+logging:
+    level:
+        root: INFO
 application:
     security:
         jwt:
