--- a/kaew-wan-frontend/package.json
+++ b/kaew-wan-frontend/package.json
@@ -13,13 +13,18 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
+    "formdata-node": "^5.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
+    "@tailwindcss/forms": "^0.5.6",
     "@tsconfig/node18": "^18.2.0",
     "@types/node": "^18.17.9",
     "@types/nprogress": "^0.2.0",
