--- a/kaew-wan-backend/pom.xml
+++ b/kaew-wan-backend/pom.xml
@@ -15,18 +15,15 @@
 	<name>kaew-wan-backend</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<kotlin.version>1.8.22</kotlin.version>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 	</properties>
 	<dependencies>
-
 		<dependency>
 			<groupId>io.ktor</groupId>
-			<artifactId>ktor-client-apache5-jvm</artifactId>
+			<artifactId>ktor-client-java-jvm</artifactId>
 			<version>2.3.5</version>
 		</dependency>
-
 		<dependency>
 			<groupId>io.github.jan-tennert.supabase</groupId>
 			<artifactId>serializer-jackson-jvm</artifactId>
