--- a/kaew-wan-frontend/package.json
+++ b/kaew-wan-frontend/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.1.4",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
+    "vue-markdown-render": "^2.1.1",
     "vue-router": "^4.2.4",
     "yup": "^1.3.2"
   },
@@ -26,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tsconfig/node18": "^18.2.0",
+    "@types/markdown-it": "^13.0.4",
     "@types/node": "^18.17.9",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
